correccion de advertencias 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -27,7 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/ingresos"
-                android:src="@drawable/ganancias" />
+                android:src="@drawable/ganancias"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,7 +51,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/gastos"
-                android:src="@drawable/costo" />
+                android:src="@drawable/costo"
+                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,7 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/usuario"
-                android:src="@drawable/perfil1" />
+                android:src="@drawable/perfil1"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -88,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingTop="14dp"
-        android:text="Meta mensual: $500" />
+        android:text="@string/meta_mensual_500" />
 
     <!-- Placeholder para la gráfica -->
     <TextView
@@ -98,13 +103,14 @@
         android:layout_marginTop="8dp"
         android:background="#E0E0E0"
         android:gravity="center"
-        android:text="GRAFICA"
+        android:text="@string/grafica"
         android:textColor="#000000"
         android:textSize="18sp" />
 
 
     <!-- Opciones semanal/mensual -->
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -113,19 +119,23 @@
 
         <Button
             android:id="@+id/btnSemanal"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2dp"
+            android:layout_marginEnd="2dp"
             android:layout_weight="1"
-            android:text="Semanal" />
+            android:text="@string/semanal_btn"
+            tools:ignore="VisualLintButtonSize" />
 
         <Button
             android:id="@+id/btnMensual"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_weight="1"
-            android:text="Mensual" />
+            android:text="@string/mensual_btn"
+            tools:ignore="VisualLintButtonSize" />
     </LinearLayout>
 
     <!-- CardView para Gastos Excesivos -->
@@ -134,7 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Gastos Excesivos"
+        android:text="@string/gastos_excesivos"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -155,7 +165,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Entretenimiento"
+                android:text="@string/entretenimiento"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -165,18 +175,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="Semana 1"
+                    android:text="@string/No_semana"
                     android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="$200"
+                    android:text="@string/cant_gasto"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -200,7 +210,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Compras"
+                android:text="@string/cateoria_gasto"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -210,18 +220,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="Mes 1"
+                    android:text="@string/No_Mes"
                     android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="$150"
+                    android:text="@string/Cant_gasto"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -246,14 +256,15 @@
                 android:id="@+id/btnCalendario"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="Calendario"
-                android:src="@drawable/calendario" />
+                android:contentDescription="@string/calendario_txt"
+                android:src="@drawable/calendario"
+                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Calendario" />
+                android:text="@string/btn_calendario" />
         </LinearLayout>
 
         <LinearLayout
@@ -267,14 +278,15 @@
                 android:id="@+id/btnCategorias"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="Categorías"
-                android:src="@drawable/categorie" />
+                android:contentDescription="@string/categor_astxt"
+                android:src="@drawable/categorie"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Categorías" />
+                android:text="@string/categor_asbtn" />
         </LinearLayout>
 
         <LinearLayout
@@ -288,14 +300,15 @@
                 android:id="@+id/btnGraficos"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="Gráficos"
-                android:src="@drawable/graficos" />
+                android:contentDescription="@string/gr_ficostxt"
+                android:src="@drawable/graficos"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Gráficos" />
+                android:text="@string/gr_ficosbtn" />
         </LinearLayout>
 
     </LinearLayout>
