--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -1,12 +1,303 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".miCuenta">
+    android:padding="16dp"
+    android:background="#FFFFFF">
+
+
+
+    <!-- Botones de opciones -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnIngresos"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/ingresos"
+                android:src="@drawable/ganancias" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/ingresos" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnGastos"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/gastos"
+                android:src="@drawable/costo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/gastos" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/usuario"
+                android:src="@drawable/perfil1"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/usuario" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Encabezado -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mi Perfil"
+        android:textSize="24sp"
+        android:textColor="#000000"
+        android:layout_gravity="center"
+        android:paddingBottom="35dp"
+        android:paddingTop="30dp"/>
+
+
+    <!-- Imagen de perfil y nombre -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:paddingBottom="16dp">
+
+        <ImageView
+            android:id="@+id/icon_perfil"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/perfil1"
+            android:contentDescription="Perfil"
+            android:layout_marginEnd="16dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_nombre_completo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nombre Completo"
+                android:textSize="18sp"
+                android:textColor="#000000"/>
+
+            <TextView
+                android:id="@+id/tv_tipo_usuario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Usuario Premium"
+                android:textSize="14sp"
+                android:textColor="#808080"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Correo -->
+    <EditText
+        android:id="@+id/et_correo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Correo"
+        android:text="correo@gmail.com"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:backgroundTint="#D1D1D1"
+        android:layout_marginBottom="12dp"/>
+
+    <!-- Contraseña -->
+    <EditText
+        android:id="@+id/et_contrasena"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Contraseña"
+        android:text="xxxxxxxxxxxx"
+        android:inputType="textPassword"
+        android:padding="12dp"
+        android:backgroundTint="#D1D1D1"
+        android:layout_marginBottom="4dp"/>
+
+    <!-- Olvidaste tu contraseña -->
+    <TextView
+        android:id="@+id/tv_olvide_contrasena"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿Olvidaste tu contraseña?"
+        android:textSize="14sp"
+        android:textColor="#808080"
+        android:layout_marginBottom="16dp"
+        android:paddingStart="4dp"/>
+
+    <!-- Botón Cambiar Contraseña -->
+    <Button
+        android:id="@+id/btn_cambiar_contrasena"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cambiar Contraseña"
+        android:background="#000000"
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Tarjetas de Crédito -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tarjetas de Crédito"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:paddingBottom="8dp"/>
+
+    <!-- Botones de Tarjetas -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="87dp">
+
+        <Button
+            android:id="@+id/btn_visa"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:text="Visa"
+            android:backgroundTint="#D1D1D1"
+            android:textColor="#000000"/>
+
+        <Button
+            android:id="@+id/btn_mastercard"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="MasterCard"
+            android:backgroundTint="#D1D1D1"
+            android:textColor="#000000"
+            android:layout_marginStart="8dp"/>
+
+        <Button
+            android:id="@+id/btn_amex"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="American Express"
+            android:backgroundTint="#D1D1D1"
+            android:textColor="#000000"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
+
+    <!-- Barra inferior -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnCalendario"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/calendario_txt"
+                android:src="@drawable/calendario"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/btn_calendario" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnCategorias"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/categor_astxt"
+                android:src="@drawable/categorie"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/categor_asbtn" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnGraficos"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:contentDescription="@string/gr_ficostxt"
+                android:src="@drawable/graficos" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/gr_ficosbtn" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
