--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
         android:paddingTop="14dp"
         android:text="@string/meta_mensual_500" />
 
-    <!-- Placeholder para la gráfica -->
+    <!-- Placeholder para la gráfica (este espacio debe moficarce para insertar la grafica) -->
     <TextView
         android:id="@+id/tvGrafica"
         android:layout_width="match_parent"
@@ -120,7 +120,6 @@
 
         <Button
             android:id="@+id/btnSemanal"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
@@ -130,7 +129,6 @@
 
         <Button
             android:id="@+id/btnMensual"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
@@ -200,7 +198,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        android:layout_marginBottom="120dp">
 
         <LinearLayout
             android:layout_width="match_parent"
