se creaaron los metodos para moverse en la mayoria de pantallas y la mayor parte de la logica en registro, gastos, perfil

--- a/app/src/main/res/layout/activity_cambiar_contra.xml
+++ b/app/src/main/res/layout/activity_cambiar_contra.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:id="@+id/cambiarContrasena">
 
     <!-- Título de la pantalla -->
     <TextView
