--- a/app/src/main/res/layout/activity_calendario_v.xml
+++ b/app/src/main/res/layout/activity_calendario_v.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".MainActivity"
-    id="@+id/calendar"
+    android:id="@+id/calendar"
     tools:ignore="VisualLintBounds">
 
     <LinearLayout
