--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/categorias">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -32,7 +33,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/calendario_btn"
-                android:src="@drawable/calendario" />
+                android:src="@drawable/calendario"
+                android:onClick="Calendario"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,7 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/categor_as_btn"
-                android:src="@drawable/categorie"/>
+                android:src="@drawable/categorie"
+                android:onClick="Categoria"/>
 
             <TextView
                 android:layout_width="wrap_content"
