--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:id="@+id/login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,7 +64,8 @@
             android:text="Iniciar Sesión"
             android:background="#000000"
             android:textColor="#FFFFFF"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:onClick="Inicio"/>
 
         <!-- Botón de Iniciar Sesión con Google -->
         <LinearLayout
