--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:id="@+id/registro">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,7 +75,8 @@
             android:text="Registrarse"
             android:background="#000000"
             android:textColor="#FFFFFF"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:onClick="Registrarse"/>
 
         <!-- Botón de Registro con Google -->
         <LinearLayout
@@ -125,7 +127,8 @@
                 android:text=" Inicia sesión"
                 android:textSize="14sp"
                 android:textColor="#0000FF"
-                android:paddingStart="4dp"/>
+                android:paddingStart="4dp"
+                android:onClick="login"/>
         </LinearLayout>
 
     </LinearLayout>
