--- a/app/src/main/res/layout/activity_grafica.xml
+++ b/app/src/main/res/layout/activity_grafica.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:id="@+id/nuevaCategoria">
+    android:id="@+id/main"
+    android:padding="15dp">
+
 
     <!-- Botones de opciones -->
     <LinearLayout
@@ -27,8 +30,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/ingresos"
-                android:onClick="ingresoCat"
-                android:src="@drawable/ganancias"/>
+                android:src="@drawable/ganancias"
+                android:onClick="ingresoI"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -50,7 +54,8 @@
                 android:layout_height="50dp"
                 android:contentDescription="@string/gastos"
                 android:src="@drawable/costo"
-                android:onClick="GastosCat"/>
+                android:onClick="GastosGra"
+                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -72,7 +77,7 @@
                 android:layout_height="50dp"
                 android:contentDescription="@string/usuario"
                 android:src="@drawable/perfil1"
-                android:onClick="irPerfilCat"/>
+                android:onClick="PerfilGra"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -83,40 +88,11 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Añadir Categoría"
-        android:textSize="24sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp" />
-
-    <EditText
-        android:id="@+id/category_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="Nombre de la Categoría"
-        android:minHeight="48dp" />
-
-
-
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Guardar"
-        android:layout_marginBottom="150dp"
-        android:layout_gravity="center"
-        android:onClick="agregarCategoria"/>
-
     <!-- Barra inferior -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -131,15 +107,16 @@
                 android:id="@+id/btnCalendario"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="@string/calendario_btn"
+                android:contentDescription="@string/calendario_txt"
                 android:src="@drawable/calendario"
-                android:onClick="CalendarioCat"/>
+                android:onClick="calenGra"
+                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/calendario" />
+                android:text="@string/btn_calendario" />
         </LinearLayout>
 
         <LinearLayout
@@ -153,15 +130,16 @@
                 android:id="@+id/btnCategorias"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="@string/categor_as_btn"
+                android:contentDescription="@string/categor_astxt"
                 android:src="@drawable/categorie"
-                android:onClick="verCategorias"/>
+                android:onClick="catGra"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/categor_as" />
+                android:text="@string/categor_asbtn" />
         </LinearLayout>
 
         <LinearLayout
@@ -175,16 +153,19 @@
                 android:id="@+id/btnGraficos"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:contentDescription="@string/gr_ficos_btn"
-                android:src="@drawable/graficos" />
+                android:contentDescription="@string/gr_ficostxt"
+                android:src="@drawable/graficos"
+                android:onClick="Graficas"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/gr_ficos" />
+                android:text="@string/gr_ficosbtn" />
         </LinearLayout>
 
     </LinearLayout>
+
 
 </LinearLayout>
