--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
                 android:layout_height="50dp"
                 android:contentDescription="@string/ingresos"
                 android:src="@drawable/ganancias"
+                android:onClick="ingrsoH"
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <TextView
