--- a/app/src/main/res/layout/activity_registro_gastos.xml
+++ b/app/src/main/res/layout/activity_registro_gastos.xml
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/ingresos"
+                android:onClick="ingresoG"
                 android:src="@drawable/ganancias" />
 
             <TextView
@@ -51,7 +52,7 @@
                 android:layout_height="50dp"
                 android:contentDescription="@string/gastos"
                 android:src="@drawable/costo"
-                android:onClick="Gastos"/>
+                android:onClick="GastosG"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,7 +74,7 @@
                 android:layout_height="50dp"
                 android:contentDescription="@string/usuario"
                 android:src="@drawable/perfil1"
-                android:onClick="irPerfil"
+                android:onClick="PerfilG"
                  />
 
             <TextView
@@ -177,7 +178,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/calendario_txt"
-                android:src="@drawable/calendario"/>
+                android:src="@drawable/calendario"
+                android:onClick="CalenG"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -198,7 +200,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:contentDescription="@string/categor_astxt"
-                android:src="@drawable/categorie"/>
+                android:src="@drawable/categorie"
+                android:onClick="CatG"/>
 
             <TextView
                 android:layout_width="wrap_content"
