--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,16 +99,11 @@
         android:text="@string/meta_mensual_500" />
 
     <!-- Placeholder para la gráfica (este espacio debe moficarce para insertar la grafica) -->
-    <TextView
-        android:id="@+id/tvGrafica"
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_marginTop="8dp"
-        android:background="#E0E0E0"
-        android:gravity="center"
-        android:text="@string/grafica"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:layout_height="200dp"
+        android:layout_gravity="center" />
 
 
     <!-- Opciones semanal/mensual -->
